--- a/app/PokemonDetail/PokemonDetail.html
+++ b/app/PokemonDetail/PokemonDetail.html
@@ -5,7 +5,8 @@
     <div class="media-body">
         <span class="badge">{{vm.pokemon.id }}</span>
         <input type="checkbox" data-ng-model="vm.rename" />
-        <h4 class="media-heading" data-nd-inline-edit data-nd-model="vm.pokemon.name" data-nd-trigger="vm.rename" data-mb-tab-index="15" data-nd-save-fn="vm.renameItem" data-nd-cancel="vm.toggleRename">
+        <h4 class="media-heading" data-nd-inline-edit data-nd-model="vm.pokemon.name"
+            data-nd-trigger="vm.rename" data-nd-save-fn="vm.save">
             <span>{{vm.pokemon.name | uppercase }}</span>
         </h4>
         <a class="btn btn-default" data-ui-sref="detail.edit">Edit</a>
