--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -9,8 +9,7 @@
     <option value="height">Росту</option>
     <option value="name">Имени</option>
 </select>
-По убыванию
-<!-- <input ng-model="sortReverse = !sortReverse" type="checkbox" name="reverse" /> -->
+<button ng-click="sortReverse = !sortReverse" type="checkbox" name="reverse">По убыванию</button>
 Отобразить только:
 <select ng-model="typeSort">
     <option value="">default</option>
